fix: selected element info overflow

--- a/uiviewer/static/css/style.css
+++ b/uiviewer/static/css/style.css
@@ -81,69 +81,11 @@ body, html {
 .center {
     width: 30%;
     background-color: #212933;
-
-}
-
-.region-title {
-    font-weight: bold;
-    margin-left: 15px;
-    margin-bottom: 10px;
 }
 
 .right {
     flex: 1;
     background-color: #212933;
-    overflow: auto;
-}
-
-.custom-table {
-    width: 100%;
-    height: 100%;
-}
-
-.custom-table .el-table__body-wrapper {
-    border: none; /* 移除外边框 */
-  }
-  
-  .custom-table .el-table__row {
-    margin-bottom: 0; /* 移除行间距 */
-  }
-  
-  .custom-table .el-table__cell {
-    padding: 5px; /* 减小单元格内边距 */
-    border-right: 1px solid #333844; /* 添加竖向内边框 */
-    border-bottom: 1px solid #333844; /* 添加横向内边框 */
-  }
-  
-  .custom-table .el-table__cell:last-child {
-    border-right: none; /* 移除最后一列的右边框 */
-  }
-  
-  .custom-table .el-table__row:last-child .el-table__cell {
-    border-bottom: none; /* 移除最后一行的下边框 */
-  }
-  
-  .custom-table .el-table__header-wrapper,
-  .custom-table .el-table__body-wrapper {
-    width: 100% !important; /* 确保表格填满父元素 */
-  }
-  
-  .custom-table .el-table__header,
-  .custom-table .el-table__body {
-    width: 100% !important; /* 确保表格填满父元素 */
-  }
-  
-  .attr-button {
-    font-size: 12px;
-    padding: 2px 3px;
-    margin-left: 5px;
-  }
-
-  code {
-  background-color: #2D3740;
-  padding: 3px 5px;
-  border-radius: 4px;
-  font-family: monospace;
 }
 
 .divider {
@@ -156,6 +98,63 @@ body, html {
 .divider-hover, .divider-dragging {
     background-color: #3679E3;
     width: 3px;
+}
+
+.region-title {
+    font-weight: bold;
+    margin-left: 15px;
+    margin-bottom: 10px;
+}
+
+.custom-table {
+    width: 100%;
+    border-bottom: none !important;
+    overflow: auto;
+}
+
+.custom-tree {
+    overflow: auto;
+}
+
+.custom-table .el-table__row {
+    margin-bottom: 0;
+}
+  
+.custom-table .el-table__cell {
+    padding: 5px;
+    border-right: 1px solid #333844;
+    border-bottom: 1px solid #333844;
+}
+
+.custom-table .el-table__body-wrapper {
+    border-bottom: none !important;
+}
+
+.custom-table .el-table__row:last-child .el-table__cell {
+    border-bottom: none !important;
+}
+
+.custom-table .el-table__header-wrapper,
+.custom-table .el-table__body-wrapper {
+    width: 100% !important;
+}
+
+.custom-table .el-table__header,
+.custom-table .el-table__body {
+    width: 100% !important;
+}
+  
+.attr-button {
+    font-size: 12px;
+    padding: 2px 3px;
+    margin-left: 5px;
+}
+
+code {
+    background-color: #2D3740;
+    padding: 3px 5px;
+    border-radius: 4px;
+    font-family: monospace;
 }
 
 .custom-link {
